UCF-APR2.4/ftr main/force-app/main/default/objects/FormData_Product__c/FormData_Product__c.object-meta.xml
<CustomObject>
    <label>FormData Product</label>
    <nameField>
        <displayFormat>FDP-{000000000}</displayFormat>
        <label>FormData Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FormData Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>