UCF-APR2.4/ftr main/force-app/main/default/objects/FormData_Product__c/fields/Are_you_porting_any_to_this_solution__c.field-meta.xml
<CustomField>
    <fullName>Are_you_porting_any_to_this_solution__c</fullName>
    <label>Are you porting any # to this solution?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>