UCF-APR2.4/ftr main/force-app/main/default/objects/FormData_Product__c/fields/Cellular_Failover__c.field-meta.xml
<CustomField>
    <fullName>Cellular_Failover__c</fullName>
    <label>Cellular Failover</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>