UCF-APR2.4/ftr main/force-app/main/default/objects/FormData_Product__c/fields/FormData__c.field-meta.xml
<CustomField>
    <fullName>FormData__c</fullName>
    <label>FormData</label>
    <referenceTo>FormData__c</referenceTo>
    <relationshipLabel>FormData Products</relationshipLabel>
    <relationshipName>FormData_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>