UCF-APR2.4/ftr main/force-app/main/default/objects/FormData_Product__c/fields/Include_a_Frontier_Managed_Router__c.field-meta.xml
<CustomField>
    <fullName>Include_a_Frontier_Managed_Router__c</fullName>
    <label>Include a Frontier Managed Router?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>