UCF-APR2.4/ftr main/force-app/main/default/objects/FormData_Product__c/fields/LocationA_City__c.field-meta.xml
<CustomField>
    <fullName>LocationA_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>