UCF-APR2.4/ftr main/force-app/main/default/objects/FormData_Product__c/fields/LocationA_State__c.field-meta.xml
<CustomField>
    <fullName>LocationA_State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Name</valueSetName>
    </valueSet>
</CustomField>