UCF-APR2.4/ftr main/force-app/main/default/objects/FormData_Product__c/fields/LocationA_Street_Site_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>LocationA_Street_Site_Coordinates__c</fullName>
    <label>Street/Site Coordinates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>