UCF-APR2.4/ftr main/force-app/main/default/objects/FormData_Product__c/fields/LocationA_ZIP__c.field-meta.xml
<CustomField>
    <fullName>LocationA_ZIP__c</fullName>
    <description>5 digit or 9 digit ZIP code.</description>
    <label>ZIP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>