UCF-APR2.4/ftr main/force-app/main/default/objects/FormData_Product__c/fields/LocationZ_City__c.field-meta.xml
<CustomField>
    <fullName>LocationZ_City__c</fullName>
    <label>City(Z)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>