UCF-APR2.4/ftr main/force-app/main/default/objects/FormData_Product__c/fields/LocationZ_Street_Site_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>LocationZ_Street_Site_Coordinates__c</fullName>
    <label>Street/Site Coordinates(Z)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>