UCF-APR2.4/ftr main/force-app/main/default/objects/FormData_Product__c/fields/Managed_Security__c.field-meta.xml
<CustomField>
    <fullName>Managed_Security__c</fullName>
    <label>Managed Security</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>