UCF-APR2.4/ftr main/force-app/main/default/objects/FormData_Product__c/fields/Product_Selection__c.field-meta.xml
<CustomField>
    <fullName>Product_Selection__c</fullName>
    <label>Product Selection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DIA - Dedicated Internet Access</fullName>
            </value>
            <value>
                <fullName>MNS - Managed Network Service</fullName>
            </value>
            <value>
                <fullName>SIP - Trunking Voice Service</fullName>
            </value>
            <value>
                <fullName>EPL - Ethernet Private Line / WAVE / FOTS - Private Network Connectivity (2 Sites)</fullName>
            </value>
            <value>
                <fullName>EVPL - Ethernet Virtual Private Line / Ethernet LAN - Private Network Connectivity (Multi-Site)</fullName>
            </value>
            <value>
                <fullName>RING - Ring Central</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>