UCF-APR2.4/ftr main/force-app/main/default/objects/FormData_Product__c/fields/Speed_3__c.field-meta.xml
<CustomField>
    <fullName>Speed_3__c</fullName>
    <label>Speed 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10M</fullName>
            </value>
            <value>
                <fullName>20M</fullName>
            </value>
            <value>
                <fullName>50M</fullName>
            </value>
            <value>
                <fullName>100M</fullName>
            </value>
            <value>
                <fullName>200M</fullName>
            </value>
            <value>
                <fullName>500M</fullName>
            </value>
            <value>
                <fullName>1G</fullName>
            </value>
            <value>
                <fullName>2G</fullName>
            </value>
            <value>
                <fullName>5G</fullName>
            </value>
            <value>
                <fullName>10G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>