UCF-APR2.4/ftr main/force-app/main/default/objects/FormData_Product__c/fields/Static_IP__c.field-meta.xml
<CustomField>
    <fullName>Static_IP__c</fullName>
    <label>Static IP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>/ 29 (5 public IPs)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>