UCF-APR2.4/ftr main/force-app/main/default/objects/FormData_Product__c/fields/Term_1__c.field-meta.xml
<CustomField>
    <fullName>Term_1__c</fullName>
    <label>Term 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>