UCF-APR2.4/ftr main/force-app/main/default/objects/FormData_Product__c/fields/Total_quantity_of_trunks_lines_needed__c.field-meta.xml
<CustomField>
    <fullName>Total_quantity_of_trunks_lines_needed__c</fullName>
    <description>Here is the minimum/maximum SIP trunks available for each hand off type: Analog 8-24 max, PRI 8-46 Max, SIP 8-5000max</description>
    <inlineHelpText>Here is the minimum/maximum SIP trunks available for each hand off type: Analog 8-24 max, PRI 8-46 Max, SIP 8-5000max</inlineHelpText>
    <label>Total quantity of trunks/lines needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>