UCF-APR2.4/ftr main/force-app/main/default/objects/FormData_Product__c/fields/Which_hand_off_does_the_customer_want__c.field-meta.xml
<CustomField>
    <fullName>Which_hand_off_does_the_customer_want__c</fullName>
    <label>Which hand off does the customer want?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIP Trunks-Standard RJ45 ethernet based SIP hand off(customer has an IP Enabled PBX)</fullName>
            </value>
            <value>
                <fullName>PRI - The customer receives SIP to the site, and we convert to a PRI hand off using a device(IAD) (customer has a traditional TDM PBX with a PRI interface card)</fullName>
            </value>
            <value>
                <fullName>FXS ports - Emulated Analog ports via 66 punch down block (do not use for alam/elevator)</fullName>
            </value>
            <value>
                <fullName>My customer does not want SIP, they just want a traditional ISDN PRI/standard B1 line(no SIP)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>