UCF-APR2.4/ftr main/force-app/main/default/objects/FormData_Product__c/fields/WiFi_Indoor__c.field-meta.xml
<CustomField>
    <fullName>WiFi_Indoor__c</fullName>
    <label>WiFi Indoor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>